# 2404.11373

./: .gitignore  2404.11373v3_extracted.txt  GPT审计清单.md  INTERACTIVE_REPRO_GUIDE.md  Makefile  README.md  gemini  gpt设计  pyproject.toml  pyring.config
configs/: defaults.yaml
configs/injections/: kerr220.yaml  kerr221.yaml  kerr330.yaml
configs/model/: tsnpe_nsf.yaml  tsnpe_nsf_tiny.yaml
docs/: ARTIFACT_POLICY.md  AUDIT_SPEC_2404_11373.md
reports/audits/: kerr220_preprocessing_ablation_round1.json  (+8 more)
scripts/: 01_fetch_gwosc_gw150914.py  02_estimate_psd.py  03_generate_injection.py  04_validate_injection_snr.py  05_build_injection_cache.py  06_train_kerr220_tsnpe.py  07_reproduce_fig1_start.py  08_run_fig1_paper_precision.py  09_start_paper_precision_kerr220_bg.ps1  10_overlay_fig1_pyring.py  11_audit_fig1_paper_spec.py  12_run_fig1_paper_repro.py  13_start_fig1_paper_repro_bg.ps1  14_plot_fig1_paper_grade.py  15_plot_fig1_case_paper_grade.py  16_report_kerr220_snr_decomposition.py  16_run_kerr220_monitored.py  17_run_kerr220_worker.ps1  18_report_kerr220_window_anchor_experiment.py  18_run_pyring_kerr220.py  19_run_pyring_fig1_case.py  19_watch_kerr220_live.ps1  20_compare_kerr220_preprocessing_ablation.py  20_plot_fig1_corner_overlay.py  21_run_fig1_remaining_cases.py  21_run_kerr220_preprocessing_ablation_stage2.py  check_m0.py
tests/: conftest.py  test_detector_reference.py  test_fig1_quality.py  test_inference.py  test_noise_resampling_snpe.py  test_qnm_mapping.py  test_ringdown_detector.py  test_seed.py  test_snr.py  test_whitening.py
(+495 files in other folders)
