[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "rd-sbi-repro"
version = "0.1.0"
description = "Reproduction code for arXiv:2404.11373v3 ringdown SBI"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
  "numpy==1.26.4",
  "scipy==1.13.1",
  "h5py==3.12.1",
  "qnm==0.4.4",
  "matplotlib==3.9.2",
  "seaborn==0.13.2",
  "pyyaml==6.0.2",
  "torch==2.3.1",
  "sbi==0.25.0",
]

[project.optional-dependencies]
dev = [
  "pytest==8.3.5",
  "pytest-cov==5.0.0",
  "ruff==0.11.2",
]

[tool.hatch.build.targets.wheel]
packages = ["src/rd_sbi"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"
